--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.11.14",
     "@mui/x-data-grid-generator": "^6.0.3",
     "@mui/x-data-grid-pro": "^6.0.3",
